--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "flowbite-typography": "^1.0.3",
     "prettier": "3.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
