--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
     "values.js": "^2.1.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
