--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext cjs,js,jsx,ts,tsx,html",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.14.6",
     "filestack-react": "^5.0.0",
+    "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
