--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
